[package]
name = "media-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
hyper = "0.14.25"
mongodb = "2.4.0"
pretty_env_logger = "0.4"
tokio-util = "0.7.8"
tokio = { version = "1", features = ["full"] }
warp = "0.3.4"
